--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="React tetris javascript tutorial game no canvas reactris"
+            content="Tetris game built with reactjs"
         />
         <meta name="author" content="Selçuk Cihan">
         <meta name="keywords" content="react,tetris,tutorial,javascript,game,no,canvas,reactris">
