--- a/public/index.html
+++ b/public/index.html
@@ -57,5 +57,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
   -->
+      <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "54fb788212a44e3daf8e503822f8bf27"}'></script><!-- End Cloudflare Web Analytics -->
     </body>
 </html>
